<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_ordering"
        android:icon="@drawable/ordering"
        android:title="@string/nav_ordering" />
    <item
        android:id="@+id/nav_food_menu"
        android:icon="@drawable/food_frag_all"
        android:title="@string/nav_menu" />

    <item
        android:id="@+id/nav_ordering_history"
        android:icon="@drawable/history"
        android:title="@string/nav_history" />

    <item
        android:title="Admin settings"
        android:id="@+id/admin_area">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_admin_panel"
                    android:title="@string/nav_admin_panel"
                    android:icon="@drawable/admin_with_cogwheels"/>
            </group>
        </menu>
    </item>

    <item
        android:title="About"
        android:id="@+id/info_area">
        <menu>
            <item
                android:id="@+id/nav_about_program"
                android:title="@string/nav_about"
                android:icon="@drawable/info"/>
        </menu>
    </item>

</menu>